# habsify

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  Procfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  validators.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_initial.py  0002_remove_profile_phone.py  0003_alter_phonenumber_number.py  0003_profile_city_profile_state_profile_street_address_and_more.py
backend/analytics/: urls.py  utils.py  views.py
backend/core/: exceptions.py  models.py  serializers.py  test_send.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_company_has_used_trial.py  0003_user_phone.py
backend/crm/: limits.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/crm/migrations/: 0001_initial.py
backend/finance/: models.py  serializers.py  signals.py  urls.py  views.py
backend/finance/migrations/: 0001_initial.py  0002_initial.py
backend/habsify/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/habsify/settings/: base.py  dev.py  prod.py
backend/home/: views.py
backend/inventory/: models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
backend/inventory/migrations/: 0001_initial.py  0002_initial.py  (+3 more)
backend/notifications/: pagination.py  views.py
backend/sales_purchases/: models.py  serializers.py  signals.py  urls.py  views.py
backend/subscriptions/: models.py  permissions.py  serializers.py  signals.py  throttles.py  urls.py  views.py
backend/supplier/: urls.py
backend/suppliers/: models.py  pagination.py  serializers.py  views.py
backend/tasks/: models.py  serializers.py
client/: .dockerignore  (+7 more)
(+54 files in other folders)
