[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.1",
    "django-environ>=0.12.0",
    "psycopg>=3.3.2",
    "djangorestframework>=3.16.1",
    "python-decouple>=3.8",
    "redis>=7.1.0",
    "pillow>=12.1.0",
    "djoser>=2.3.3",
    "djangorestframework-simplejwt>=5.5.1",
]
