[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg>=3.3.2",
    "djangorestframework>=3.16.1",
    "python-decouple>=3.8",
    "pillow>=12.1.0",
    "djoser>=2.3.3",
    "djangorestframework-simplejwt>=5.5.1",
    "django-phonenumber-field>=8.4.0",
    "phonenumbers>=9.0.22",
    "twilio>=9.10.0",
    "django-ratelimit>=4.1.0",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "python-dateutil>=2.9.0.post0",
    "django>=6.0.1",
    "reportlab>=4.4.10",
    "django-celery-beat>=2.1.0",
    "celery[redis]>=5.6.2",
    "django-cors-headers>=4.9.0",
]
